<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="543dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:background="#2C51B9"
        android:gravity="center"
        android:text="@string/data_changed"
        android:textColor="@android:color/white"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dialogTitle"
        android:textSize="24sp"
        android:text="@string/do_you_want_to_save"
        android:gravity="center"
        android:layout_marginTop="@dimen/app_spacing_xlarge"
        android:layout_marginBottom="@dimen/app_spacing_xxxlarge"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/app_spacing_large"
        android:layout_marginBottom="@dimen/app_spacing_large"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button_cancel"
            style="@style/CoreTheme.Button.Secondary"
            android:layout_marginEnd="@dimen/app_spacing_large"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/button_ok"
            style="@style/CoreTheme.Button.Secondary"
            android:text="@string/delete"/>
    </LinearLayout>

</LinearLayout>