<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="543dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog_base_dark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="#4D5377A9"
        android:gravity="center"
        android:text="@string/channel"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:maxLength="3"
        android:hint="@string/your_channel_number"
        android:textColorHint="@color/textHintWhite"
        android:gravity="center"
        android:inputType="number"
        android:focusable="true"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:layout_marginBottom="@dimen/margin_extra_large"
        android:paddingTop="@dimen/margin"
        android:paddingBottom="@dimen/margin"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:layout_marginStart="@dimen/margin_x9"
        android:layout_marginEnd="@dimen/margin_x9"
        android:layout_marginBottom="@dimen/margin_extra_large"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel"
            style="@style/CoreTheme.Button.Secondary"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel" />

        <Space
            android:layout_width="@dimen/margin_extra_medium"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_ok"
            style="@style/CoreTheme.Button.Primary"
            android:layout_weight="1"
            android:text="@string/agree" />

    </LinearLayout>

</LinearLayout>