<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="343dp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorButtonPrimary"
        android:gravity="center"
        android:text="@string/channel"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorButtonPrimary"
        android:textSize="16sp"
        android:maxLength="3"
        android:hint="@string/your_channel_number"
        android:textColorHint="@color/textHintPrimary"
        android:gravity="center"
        android:inputType="number"
        android:focusable="true"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:layout_marginBottom="@dimen/margin_extra_large"
        android:paddingTop="@dimen/margin"
        android:paddingBottom="@dimen/margin"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_large"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel"
            style="@style/MobileTheme.Button.Border.Gray.Mobile"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel" />

        <Space
            android:layout_width="@dimen/margin_medium"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_ok"
            style="@style/MobileTheme.Button.Border.Blue.Mobile"
            android:layout_weight="1"
            android:text="@string/dialog_ok" />

    </LinearLayout>

</LinearLayout>